# yakiniku

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .gitignore  README.md  alembic.ini  cli.py  main.py  pyproject.toml  requirements.txt  yakiniku.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_schema.py  8ed90c217304_add_device_session_columns.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/domains/: __init__.py
backend/app/models/: __init__.py  booking.py  branch.py  category.py  chat.py  combo.py  customer.py  item.py  menu.py  order.py  preference.py  promotion.py  staff.py  table.py  user.py
backend/app/routers/: __init__.py  bookings.py  branches.py  chat.py  customers.py  dashboard.py  menu.py  notifications.py  orders.py  tables.py  websocket.py
backend/app/schemas/: __init__.py  booking.py  branch.py  chat.py  customer.py  menu.py  order.py
backend/app/services/: __init__.py  chat_service.py  notification_service.py  (+1 more)
backend/data/: __init__.py  bookings.csv  branch_customers.csv  branches.csv  combo_items.csv  combos.csv  customer_preferences.csv  customers.csv  fix_encoding.py  item_categories.csv  item_option_assignments.csv  item_option_groups.csv  item_options.csv  items.csv  menu_items.csv  promotions.csv  seed.sql  seed_data.py  seed_pg.sql  staff.csv  tables.csv  users.csv
backend/scripts/: check_db.py  check_encoding.py  download_images.py  fix_encoding.py  fix_encoding_all.py  seed_enhanced_menu.py  seed_menu.py
(+159 files in other folders)
